@@ -2,6 +2,7 @@ package com.ssd.SSD.controllers;
 
 import com.ssd.SSD.DTO.AuthRequest;
 import com.ssd.SSD.DTO.EmailVerificationRequest;
+import com.ssd.SSD.DTO.UserDTO;
 import com.ssd.SSD.models.User;
 import com.ssd.SSD.DTO.UserRegistrationRequest;
 import com.ssd.SSD.models.UserVerification;
@@ -40,22 +41,26 @@ public class AuthController {
     private final String title = "Verification Code";
 
     @PostMapping("/login")
-    public ResponseEntity<String > login(@RequestBody AuthRequest request) {
+    public ResponseEntity<?> login(@RequestBody AuthRequest request, HttpServletResponse response) throws IOException {
         User user = userService.findByEmail(request.getEmail());
 
         if (user == null) {
+
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("This email not exits");
         }
 
         boolean isPasswordValid = userService.checkPassword(request.getPassword(), user.getPassword());
 
         if (isPasswordValid) {
-            String jwt = userService.createJwtToken(user.getUsername());
-            return ResponseEntity.status(HttpStatus.OK).body(jwt);
+            String jwt = userService.createJwtToken(user.getUsername(),user.getRole());
+
+            return ResponseEntity.ok( jwt);
         } else {
             return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Неверный логин или пароль");
         }
     }
+
+
 
     @PostMapping("/register")
     public ResponseEntity<?> register(@RequestBody @Valid UserRegistrationRequest request, BindingResult bindingResult) {
@@ -77,101 +82,80 @@ public class AuthController {
 //        request.setEmail(policy.sanitize(request.getEmail()));
         request.setUsername(policy.sanitize(request.getUsername()));
 
-        if (isValidEmail(request.getEmail())){
-            userService.register(request.getPassword(), request.getEmail(), request.getUsername());
-            String jwt = userService.createJwtToken(request.getUsername());
-            return ResponseEntity.ok(jwt);
+        if (isValidEmail(request.getEmail()) && userService.findByEmail(request.getEmail()) == null){
+
+            String code = String.format("%06d", ThreadLocalRandom.current().nextInt(0, 1000000));
+
+            if(messageSender.sendSync(code,title, request.getEmail())){
+                userVerificService.save(request,code);
+                return ResponseEntity.ok("Verification Code code send to " + request.getEmail());
+            }
         }
         return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalidний email");
     }
 
+    @PostMapping("/verify")
+    public ResponseEntity<?> verifyEmail(@RequestBody EmailVerificationRequest request){
+        UserVerification userVerification = userVerificService.getByEmail(request.getEmail());
+        if (userVerification.getCode().equals(request.getCode())){
+            User user = userService.register(userVerification.getPassword(), userVerification.getEmail(), userVerification.getUsername());
+            userVerificService.removeByEmail(request.getEmail());
 
-//    @PostMapping("/login")
-//    public ResponseEntity<?> login(@RequestBody AuthRequest request, HttpServletResponse response) throws IOException {
+            String jwt = userService.createJwtToken(userVerification.getUsername(),user.getRole() );
+            return ResponseEntity.ok(jwt);
+
+        }
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("code was bad");
+    }
+
+
+    @GetMapping("/userinfo")
+    public ResponseEntity<?> userInfo() {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userService.findByUsername(username);
+        UserDTO userDTO = new UserDTO(user.getId(), user.getUsername(), user.getEmail(), user.getRole());
+        return ResponseEntity.ok(userDTO);
+    }
+
+    //    @PostMapping("/login")
+//    public ResponseEntity<String> login(@RequestBody AuthRequest request) {
 //        User user = userService.findByEmail(request.getEmail());
 //
 //        if (user == null) {
-//
 //            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("This email not exits");
 //        }
 //
 //        boolean isPasswordValid = userService.checkPassword(request.getPassword(), user.getPassword());
 //
 //        if (isPasswordValid) {
-//            String jwt = userService.createJwtToken(user.getUsername());
-//
-//            Cookie cookie = new Cookie("JWT", jwt);
-//            cookie.setHttpOnly(true);  // Prevent JavaScript access to the cookie
-//            cookie.setSecure(true);     // Ensure cookie is sent over HTTPS (if applicable)
-//            cookie.setPath("/");       // Available to the entire domain
-//            cookie.setMaxAge(60 * 60 * 24 * 30); // Set the cookie's expiration time (30 day)
-//
-//            response.addCookie(cookie);
-//
-////            response.sendRedirect("http://localhost:8082/ssd");
-//
-//            return null;
+//            String jwt = userService.createJwtToken(user.getUsername(), user.getRole());
+//            return ResponseEntity.status(HttpStatus.OK).body(jwt);
 //        } else {
 //            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Неверный логин или пароль");
 //        }
 //    }
 
-
-//
 //    @PostMapping("/register")
 //    public ResponseEntity<?> register(@RequestBody @Valid UserRegistrationRequest request, BindingResult bindingResult) {
 //        if (bindingResult.hasErrors()) {
 //            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-//                    .body(bindingResult.getAllErrors().stream()
-//                            .map(objectError -> {
-//                                if (objectError instanceof FieldError) {
-//                                    FieldError fieldError = (FieldError) objectError;
-//                                    // Формуємо повідомлення з помилкою і полем, де вона сталася
-//                                    return fieldError.getDefaultMessage() + " " + fieldError.getField();
-//                                } else {
-//                                    // Якщо це не FieldError, повертаємо загальне повідомлення
-//                                    return objectError.getDefaultMessage();
-//                                }
-//                            })
-//                            .collect(Collectors.toList()));
+//                    .body(bindingResult.getFieldErrors().stream()
+//                            .map(fieldError -> fieldError.getDefaultMessage())
+//                            .toList());
 //        }
-////        request.setEmail(policy.sanitize(request.getEmail()));
+//
 //        request.setUsername(policy.sanitize(request.getUsername()));
 //
-//        if (isValidEmail(request.getEmail()) && userService.findByEmail(request.getEmail()) == null){
-//
-//            String code = String.format("%06d", ThreadLocalRandom.current().nextInt(0, 1000000));
-//
-//            if(messageSender.sendSync(code,title, request.getEmail())){
-//                userVerificService.save(request,code);
-//                return ResponseEntity.ok("Verification Code code send to " + request.getEmail());
-//            }
+//        if (isValidEmail(request.getEmail())) {
+//            userService.register(request.getPassword(), request.getEmail(), request.getUsername());
+//            String jwt = userService.createJwtToken(request.getUsername(),"ROLE_USER");
+//            return ResponseEntity.ok(jwt);
 //        }
 //        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("Invalidний email");
+//
 //    }
 
-//    @PostMapping("/verify")
-//    public ResponseEntity<?> verifyEmail(@RequestBody EmailVerificationRequest request){
-//        UserVerification userVerification = userVerificService.getByEmail(request.getEmail());
-//        if (userVerification.getCode().equals(request.getCode())){
-//            userService.register(userVerification.getPassword(),userVerification.getEmail(),userVerification.getUsername());
-//            userVerificService.removeByEmail(request.getEmail());
-//
-//            String jwt = userService.createJwtToken(userVerification.getUsername());
-//            return ResponseEntity.ok(jwt);
-//
-//        }
-//        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body("code was bad");
-//    }
-
-
-    @GetMapping("/userinfo")
-    public String  userInfo(){
-        return SecurityContextHolder.getContext().getAuthentication().getName();
-    }
-
-
-    private boolean isValidEmail(String email){
+    private boolean isValidEmail(String email) {
         if (email == null) {
             return false;
         }
